--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* Lume's design system */
-@import "https://unpkg.com/@lumeland/ds@0.5.2/ds.css";
+/* @import "https://unpkg.com/@lumeland/ds@0.5.2/ds.css"; */
+@import "css/ds.css";
 
 /* Custom components */
 @import "css/menu.css";
@@ -70,6 +71,9 @@ html {
     flex: 1 1 auto;
   }
   .theme {
+    input {
+      display: none;
+    }
     svg {
       display: block;
       fill: currentColor;
